# medium

./: .gitignore  README.md
rest-api/: .gitignore  README.md  architecture.mermaid  pyproject.toml
rest-api/rest_api/: rest.py
rest-api/rest_api/db/: common.py
rest-api/rest_api/entities/: class-diagram.mermaid  companies.py  search_models.py  simple-search.mermaid  users.py
rest-api/rest_api/helpers/: api_docs_helpers.py  examples.py  introspection.py
rest-api/rest_api/resources/docs/: rest-api.md
rest-api/rest_api/resources/examples/: company-create-acme.json  company-search-by-id.json  company-update-yoyodyne.json  error-company-create-no-name.json  error-user-create-john-doe-company-type-error.json  error-user-create-john-doe-no-password.json  error-user-create-john-doe-unknown-company.json  error-user-search-dict-first-name.json  error-user-search-string-company-id.json  error-user-search-unknown-field.json  invalid-payload-type.json  user-create-john-doe.json  user-search-and-of-or.json  user-search-by-company-id-and-name.json  user-search-by-name-or-company-id.json  user-search-depth-three.json  user-search-not-named-john.json  user-search-simple.json  user-update-jane.json
rest-api/tests/: __init__.py  common.py  test_api_companies.py  test_api_users.py  test_main.http
rest-api/tests/api/: test_api_companies.py  test_api_general.py  test_api_users.py
rest-api/tests/entities/: test_search_entities.py  test_select_generation.py
rest-api/tests/helpers/: entities_helpers.py  test_api_docs_helpers.py
