[project]
name = "rest-api"
description = "Example REST API which demonstrates some modern Python REST API best practices."
readme = "README.md"
license = {text = "Apache v2"}
keywords = ["REST", "API", "FastAPI", "SQLModel", "Pydantic", "SQLAlchemy"]

version = "2024.06.03"

requires-python = ">= 3.11.5"

authors = [
  {name = "Raymond Peck", email = "rpeck@rpeck.com"},
]

maintainers = [
  {name = "Raymond Peck", email = "rpeck@rpeck.com"},
]

dependencies = [
  "annotated-types==0.7.0",
  "argon2-cffi==23.1.0",
  "email_validator==2.1.1",
  "environs==1.0.0",
  "fastapi==0.111.0",
  "fastapi-cli==0.0.4",
  "httptools==0.6.1",
  "httpx==0.27.0",
  "loguru==0.7.2",
  "pydantic==2.7.3",
  "pydantic_core==2.18.4",
  "python-dotenv==1.0.1",
  "SQLAlchemy==2.0.30",
  "sqlmodel==0.0.18",
  "typer==0.12.3",
  "typing_extensions==4.12.1",
  "uvicorn==0.30.1",
]

[project.optional-dependencies]
dev = [
  "jsondiff==2.0.0",
  "mypy==1.10.0",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "pytest-mock==3.12.0",
  "pytest-repeat==0.9.3",
  "pytest-xdist==3.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
